style: prevent chat title from wrapping

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -112,6 +112,10 @@ form button {
   gap: 0.5rem;
 }
 
+h2 {
+  white-space: nowrap;
+}
+
 h2::first-letter {
   text-transform: capitalize;
 }
@@ -186,5 +190,4 @@ h2::first-letter {
   .chat {
     width: 350px;
   }
-  
 }
